fixed jumpy theme toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,6 @@ body {
 
 header {
     width: 100vw;
-    border: 1px solid #9e055e;
     display: flex;
     justify-content: space-between;
     align-items: start;
@@ -54,7 +53,6 @@ html.dark {
 }
 
 .nav-links {
-    width: 100%;
     top: 5rem;
     display: none;
     margin: 0;
@@ -81,10 +79,10 @@ li {
 }
   
 .expanded {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 85vw
 }
   
 @media screen and (min-width: 636px) {
